gcc/testsuite/g++.dg/cpp1y/auto-fn37.C
// PR c++/80145
// { dg-do compile { target c++14 } }

auto* foo() { return 0; }  // { dg-error "unable to deduce" }
auto* foo();
